force-app/main/default/objects/AH_Salesforce_Instance__c/AH_Salesforce_Instance__c.object-meta.xml
<CustomObject>
    <description>NICC-031037 - Stores information about Salesforce instances retrieved via API from the Salesforce Trust website.</description>
    <label>AH Salesforce Instance</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AH Salesforce Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>