force-app/main/default/objects/AH_Salesforce_Instance__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicates whether the instance hosts either sandbox or production orgs.</inlineHelpText>
    <label>Environment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>