force-app/main/default/objects/AH_Salesforce_Instance__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-031037</description>
    <inlineHelpText>Indicates whether or not the instance is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>