force-app/main/default/objects/AH_Salesforce_Instance__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Region where instance is located (NA, EU, APAC).</inlineHelpText>
    <label>Location</label>
    <length>10</length>
    <type>Text</type>
</CustomField>