force-app/main/default/objects/AH_Salesforce_Instance__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List of Salesforce products available on the instance.</inlineHelpText>
    <label>Products</label>
    <type>TextArea</type>
</CustomField>