force-app/main/default/objects/AH_Salesforce_Instance__c/fields/Release_Number__c.field-meta.xml
<CustomField>
    <fullName>Release_Number__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Current release number of the instance.</inlineHelpText>
    <label>Release Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>