force-app/main/default/objects/AH_Salesforce_Instance__c/fields/Release_Version__c.field-meta.xml
<CustomField>
    <fullName>Release_Version__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Current release version of the instance.</inlineHelpText>
    <label>Release Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>