force-app/main/default/objects/AH_Salesforce_Instance__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List of Salesforce services available on the instance.</inlineHelpText>
    <label>Services</label>
    <type>TextArea</type>
</CustomField>