force-app/main/default/objects/AH_Salesforce_Instance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The status of the instance - default is &apos;OK&apos;.</inlineHelpText>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>