force-app/main/default/objects/AH_Salesforce_Instance__c/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Release_Version__c</columns>
    <columns>Release_Number__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
    <language>en_US</language>
</ListView>