force-app/main/default/objects/AH_Salesforce_Instance__c/listViews/Sandbox_Instances.listView-meta.xml
<ListView>
    <fullName>Sandbox_Instances</fullName>
    <columns>NAME</columns>
    <columns>Release_Version__c</columns>
    <columns>Release_Number__c</columns>
    <columns>Location__c</columns>
    <columns>Services__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>CS</value>
    </filters>
    <label>Sandbox Instances</label>
    <language>en_US</language>
</ListView>